[project]
name = "gustopunch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "keyring>=25.6.0",
    "py2app>=0.28.8",
    "rumps>=0.4.0",
    "selenium>=4.29.0",
    "setuptools>=76.0.0",
    "webdriver-manager>=4.0.2",
]
